<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:id="@+id/fragment_movie_detail_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movie_image"
        android:id="@+id/movie_title"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:text="@string/text_movie_title"
        android:textColor="#000"
        android:textSize="19sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container1"
        android:id="@+id/movie_image"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/container1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_directiors"
            android:text="@string/text_list_movie_directors"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_star_actors"
            android:text="@string/text_list_movie_star_actors"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            >

        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_description"
            android:text="@string/test_movie_description"
            android:textColor="#000"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>